@@ -74,6 +74,8 @@ Version 1.11.15+dev:
      terrain independent of its terrain code
    * Fix bug in Return Guardian Micro AI when there is no path to the return hex
    * Fix bug #20126: Recursive preprocessor includes cause infinite loop
+   * Added 'faction_lock' and 'leader_lock' to SideWML to be used in MP Connect
+     screen. Fixes bug #21978.
 
 Version 1.11.15:
  * Graphics:
